PORT-2508 - Changing fulfillment status to readonly TextField and mapped values to readable values, fixing input alignment

--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order/FulfillmentOrder.scss
@@ -15,18 +15,19 @@
     margin: 1.7rem 0;
   }
 
-  /* AtlasKit Bugfi */
+  /* AtlasKit Bugfix */
   input[disabled] {
     height: auto;
-  }
-
-  &__select {
   }
 
   &__button-row {
     display: flex;
     justify-content: flex-end;
     margin: 16px;
+  }
+
+  &__input {
+    margin-bottom: 16px;
   }
 }
 
